added .jpg in last of profilepic

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,7 +19,7 @@
                     <div class="w-1/2 text-center  ">
                         <div class="w-full flex justify-center">
                             <div class="w-40 h-40 rounded-md ">
-                                <img class="w-full overflow-hidden h-full rounded-[50%] object-cover" src="/imgaes/uploads/<%=user.profilepic%>" alt="">
+                                <img class="w-full overflow-hidden h-full rounded-[50%] object-cover" src="/imgaes/uploads/<%=user.profilepic%>.jpg" alt="">
                             </div>
                         </div>
 
